Added contact page

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -74,6 +74,18 @@
     font-size: 4rem;
   }
 
+  main#about h1 {
+    font-size: 4rem;
+  }
+
+  main#work h1 {
+    font-size: 4rem;
+  }
+
+  main#contact h1 {
+    font-size: 4rem;
+  }
+
   .projects {
     grid-template-columns: 1fr;
   }
