Slight tweaks using fontawesome

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
-$primary-color: #404040;
-$secondary-color: #eece1a;
+$primary-color: #aaa;
+$secondary-color: #1441aa;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.8;
